HTML, CSS, photos

--- a/index.html
+++ b/index.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=IM+Fell+English+SC&family=Poiret+One&family=Unbounded:wght@200..900&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="navbar.css" />
+    <link rel="stylesheet" href="hero.css" />
+    <link rel="stylesheet" href="events.css" />
+    <link rel="stylesheet" href="news.css" />
+    <link rel="stylesheet" href="contact.css" />
+    <link rel="stylesheet" href="footer.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pärmar & Poesi</title>
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <h1>Pärmar & Poesi</h1>
+        </nav>
+    </header>
+
+    <main>
+        <section class="hero-section">
+            <h2>Hero</h2>
+        </section>
+
+        <section class="event-section">
+            <h2>Events</h2>
+        </section>
+
+        <section class="news-section">
+            <h2>News</h2>
+        </section>
+
+        <section class="contact-section">
+            <h2>Contact us</h2>
+        </section>
+    </main>
+
+    <footer>
+        <p>Footer</p>
+    </footer>
+
+
 </body>
+
 </html>
