la till html under section class news-section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,51 @@
         </section>
 
         <section class="news-section">
-            <h2>News</h2>
+            <h2>Nyheter</h2>
+            <section class="nyhets-block">
+                <article>
+                    <figure>
+                        <img src="/parmar-poesi/images/CamillaLäckberg.JPG" alt="CamillaLäckberg" width="150px" height="auto">
+                    </figure>
+                    <aside>
+                        <h3>Camilla Läckberg</h3>
+                        <p>Boksignering i Vadstena! Se vilka böcker Camilla tycker om att...</p>
+                    </aside>
+                    <summary>
+                        <p>Svenska Dagbladet</p>
+                        <p>16h</p>
+                        <img src="/parmar-poesi/images/more-vertical.png" alt="moredetailsimage">
+                    </summary>
+                </article>
+                <article>
+                    <figure>
+                        <img src="/parmar-poesi/images/BokmässanGBG.JPG" alt="BokmässanGBG"  width="150px" height="auto">
+                    </figure>
+                    <aside>
+                        <h3>Bokmässan i Göteborg</h3>
+                        <p>Få de senaste nyheterna om medverkande författare...</p>
+                    </aside>
+                    <summary>
+                        <p>GP</p>
+                        <p>1d</p>
+                        <img src="/parmar-poesi/images/more-vertical.png" alt="moredetailsimage">
+                    </summary>
+                </article>
+                <article>
+                    <figure>
+                        <img src="/parmar-poesi/images/JensLapidus.JPG" alt="Jens Lapidus"  width="150px" height="auto">
+                    </figure>
+                    <aside>
+                        <h3>Jens Lapidus</h3>
+                        <p>Jens Lapidus gör tv om kända båldsutbrott</p>
+                    </aside>
+                    <summary>
+                        <p>SvD</p>
+                        <p>2d</p>
+                        <img src="/parmar-poesi/images/more-vertical.png" alt="moredetailsimage">
+                    </summary>
+                </article>
+            </section>
         </section>
 
         <section class="contact-section">
