Updated hero section and navbar

--- a/index.html
+++ b/index.html
@@ -26,14 +26,20 @@
 
 <body>
     <header>
+        <h1>Pärmar & Poesi</h1>
         <nav>
-            <h1>Pärmar & Poesi</h1>
+            <img src="./images/Menu.png" class="hamburger-meny-image" alt="hambuger-menu-image"/>
         </nav>
     </header>
 
     <main>
         <section class="hero-section">
-            <h2>Hero</h2>
+            <img src="./images/katt-desktop.jpeg" class="hero-image" alt="hero-image"/>
+            <div class="hero-wrapper">
+                <h2 class="hero-headings">Böcker<br>Poesi<br>Gemenskap</h2>
+                <button class="hero-contact-us-button" href="#">Kontakta oss</button>
+            </div>
+            <img src="./images/Expand Arrow.png" class="hero-down-arrow" alt="down-arrow"/>
         </section>
 
         <section class="event-section">
