--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <section class="nyhets-block">
                 <article>
                     <figure>
-                        <img src="/parmar-poesi/images/CamillaLäckberg.JPG" alt="CamillaLäckberg" width="150px" height="auto">
+                        <img src="/images/CamillaLäckberg.JPG" alt="CamillaLäckberg" width="150px" height="auto">
                     </figure>
                     <aside>
                         <h3>Camilla Läckberg</h3>
@@ -60,12 +60,12 @@
                     <summary>
                         <p>Svenska Dagbladet</p>
                         <p>16h</p>
-                        <img src="/parmar-poesi/images/more-vertical.png" alt="moredetailsimage">
+                        <img src="/images/more-vertical.png" alt="moredetailsimage">
                     </summary>
                 </article>
                 <article>
                     <figure>
-                        <img src="/parmar-poesi/images/BokmässanGBG.JPG" alt="BokmässanGBG"  width="150px" height="auto">
+                        <img src="/images/BokmässanGBG.JPG" alt="BokmässanGBG"  width="150px" height="auto">
                     </figure>
                     <aside>
                         <h3>Bokmässan i Göteborg</h3>
@@ -74,12 +74,12 @@
                     <summary>
                         <p>GP</p>
                         <p>1d</p>
-                        <img src="/parmar-poesi/images/more-vertical.png" alt="moredetailsimage">
+                        <img src="/images/more-vertical.png" alt="moredetailsimage">
                     </summary>
                 </article>
                 <article>
                     <figure>
-                        <img src="/parmar-poesi/images/JensLapidus.JPG" alt="Jens Lapidus"  width="150px" height="auto">
+                        <img src="/images/JensLapidus.JPG" alt="Jens Lapidus"  width="150px" height="auto">
                     </figure>
                     <aside>
                         <h3>Jens Lapidus</h3>
@@ -88,7 +88,7 @@
                     <summary>
                         <p>SvD</p>
                         <p>2d</p>
-                        <img src="/parmar-poesi/images/more-vertical.png" alt="moredetailsimage">
+                        <img src="/images/more-vertical.png" alt="moredetailsimage">
                     </summary>
                 </article>
             </section>
