added code to contact-section and contact.css

--- a/index.html
+++ b/index.html
@@ -45,7 +45,18 @@
         </section>
 
         <section class="contact-section">
-            <h2>Contact us</h2>
+            <h2 class="title-contact">Contact us</h2>
+            <form>
+                <label for="name" class="form-title">Namn:</label><br>
+                <input type="text" class="text1" id="name" name="name"><br>
+                <label for="mail" class="form-title">Mail:</label><br>
+                <input type="text" class="text1" id="mail" name="mail"><br>
+                <label for="text" class="form-title">Text:</label><br>
+                <textarea id="message" name="message" class="text2" rows="10" cols="40"></textarea><br>
+            </form>
+            <div class="button-container">
+                <button type="submit" class="button-send">Skicka</button>
+            </div>
         </section>
     </main>
 
