--- a/index.html
+++ b/index.html
@@ -28,7 +28,16 @@
     <header>
         <h1>Pärmar & Poesi</h1>
         <nav>
-            <img src="./images/Menu.png" class="hamburger-meny-image" alt="hambuger-menu-image"/>
+            <button class="hamburger-menu-button"><img src="./images/Menu.png" class="hamburger-menu-image" alt="hambuger-menu-image"/></button>
+            <div class="hamburger-dropdown-content">
+                <ul class="dropdown-link-list">
+                    <a class="dropdown-link" href="#event-section">Evenemang</a>
+                    <a class="dropdown-link" href="#news-section">Nyheter</a>
+                    <a class="dropdown-link" href="#contact-section">Kontakta oss</a>
+                    <a class="dropdown-link" href="#contact-section">Facebook</a>
+                    <a class="dropdown-link" href="#contact-section">Instagram</a>
+                </ul>
+            </div>
         </nav>
     </header>
 
@@ -42,7 +51,7 @@
             <img src="./images/Expand Arrow.png" class="hero-down-arrow" alt="down-arrow"/>
         </section>
 
-        <section class="event-section">
+        <section class="event-section" id="event-section">
             <h2>Evenemang</h2>
             <article class="event-card">
                 <p class="event-content">Ni är alla välkomna till vårat release party för Nancy Mitfords nya bok den 28/11 här på Pärmar & Poesi!</p>
@@ -65,7 +74,7 @@
 
         </section>
 
-        <section class="news-section">
+        <section class="news-section" id="news-section">
             <h2>Nyheter</h2>
             <section class="nyhets-block">
                 <article>
@@ -113,7 +122,7 @@
             </section>
         </section>
 
-        <section class="contact-section">
+        <section class="contact-section" id="contact-section">
             <h2 class="title-contact">Contact us</h2>
             <form>
                 <label for="name" class="form-title">Namn:</label><br>
@@ -133,7 +142,7 @@
         <p>Footer</p>
     </footer>
 
-
+    <script type="module" src="./navbar.js"></script>
 </body>
 
 </html>
