--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
     <header>
         <h1>Pärmar & Poesi</h1>
         <nav>
-            <button class="hamburger-menu-button"><img src="./images/Menu.png" class="hamburger-menu-image" alt="hambuger-menu-image"/></button>
+            <button class="hamburger-menu-button">
+                <img class="hamburger-menu-close-image" src="./images/black-x.png" alt="hamburger-menu-close-image"/>
+                <img class="hamburger-menu-image" src="./images/Menu.png" alt="hambuger-menu-image"/>
+            </button>
             <div class="hamburger-dropdown-content">
+                <img class="hamburger-dropdown-books-image" src="./images/books-hero.png"/>
                 <ul class="dropdown-link-list">
                     <a class="dropdown-link" href="#event-section">Evenemang</a>
                     <a class="dropdown-link" href="#news-section">Nyheter</a>
@@ -46,7 +50,7 @@
             <img src="./images/katt-desktop.jpeg" class="hero-image" alt="hero-image"/>
             <div class="hero-wrapper">
                 <h2 class="hero-headings">Böcker<br>Poesi<br>Gemenskap</h2>
-                <button class="hero-contact-us-button" href="#">Kontakta oss</button>
+                <button class="hero-contact-us-button"><a class="hero-contact-us-button-text" href="#contact-section">Kontakta oss</a></button>
             </div>
             <img src="./images/Expand Arrow.png" class="hero-down-arrow" alt="down-arrow"/>
         </section>
