Addex texture img to dropdown menu

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <img class="hamburger-menu-image" src="./images/Menu.png" alt="hambuger-menu-image"/>
             </button>
             <div class="hamburger-dropdown-content">
-                <img class="hamburger-dropdown-books-image" src="./images/books-hero.png"/>
+                <img class="hamburger-dropdown-texture-image" src="./images/dropdown-texture.png"/>
                 <ul class="dropdown-link-list">
                     <a class="dropdown-link" href="#event-section">Evenemang</a>
                     <a class="dropdown-link" href="#news-section">Nyheter</a>
