--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="navbar.css" />
     <link rel="stylesheet" href="hero.css" />
@@ -102,7 +103,7 @@
                     </figure>
                     <aside>
                         <h3>Jens Lapidus</h3>
-                        <p>Jens Lapidus gör tv om kända båldsutbrott</p>
+                        <p>Jens Lapidus gör tv om kända våldsutbrott</p>
                     </aside>
                     <summary>
                         <p>SvD</p>
@@ -114,7 +115,7 @@
         </section>
 
         <section class="contact-section">
-            <h2 class="title-contact">Contact us</h2>
+            <h2 class="title-contact">Kontakta Oss</h2>
             <form>
                 <label for="name" class="form-title">Namn:</label><br>
                 <input type="text" class="text1" id="name" name="name"><br>
@@ -122,17 +123,32 @@
                 <input type="text" class="text1" id="mail" name="mail"><br>
                 <label for="text" class="form-title">Text:</label><br>
                 <textarea id="message" name="message" class="text2" rows="10" cols="40"></textarea><br>
+                <div class="button-container">
+                    <button type="submit" class="button-send">Skicka</button>
+                </div>
             </form>
-            <div class="button-container">
-                <button type="submit" class="button-send">Skicka</button>
-            </div>
         </section>
     </main>
 
     <footer>
-        <p>Footer</p>
+        <div class="footer-text openinghours">
+            <h4>Öppettider</h4><br>
+            <p>Mån-Fre 10:00 - 20:00</p>
+            <p>Lör 11:00 - 22:00</p>
+            <p>Sön Stängt</p>
+        </div>
+        <div class="footer-text adress">
+            <h4>Här Finns Vi</h4><br>
+            <p>Pärmar & Poesi</p>
+            <p>Bokgatan 21</p>
+            <p>123 45 Bokstaden</p>
+        </div>
+        <div class="social-media">
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-facebook"></i>
+            </a>
+        </div>
     </footer>
-
 
 </body>
 
