updated news.css and h2 in events.css to match h2 in news

--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
                         <p>Boksignering i Vadstena! Se vilka böcker Camilla tycker om att...</p>
                     </aside>
                     <summary>
-                        <p>Svenska Dagbladet</p>
-                        <p>16h</p>
+                        <p>Svenska Dagbladet 16h</p>
                         <img src="/images/more-vertical.png" alt="moredetailsimage">
                     </summary>
                 </article>
@@ -105,8 +104,7 @@
                         <p>Få de senaste nyheterna om medverkande författare...</p>
                     </aside>
                     <summary>
-                        <p>GP</p>
-                        <p>1d</p>
+                        <p>GP 1d</p>
                         <img src="/images/more-vertical.png" alt="moredetailsimage">
                     </summary>
                 </article>
@@ -119,12 +117,15 @@
                         <p>Jens Lapidus gör tv om kända våldsutbrott</p>
                     </aside>
                     <summary>
-                        <p>SvD</p>
-                        <p>2d</p>
+                        <p>SvD 2d</p>
                         <img src="/images/more-vertical.png" alt="moredetailsimage">
                     </summary>
                 </article>
+                <button type="submit" class="button-send">Läs Mer</button>
             </section>
+            <article class="event-quote">
+                <p><i>“There is no friend as loyal as a book.”<br></i> ― Ernest Hemingway</p>
+            </article>
         </section>
 
         <section class="contact-section">
