added mediaqueries to footer and contact-form

--- a/index.html
+++ b/index.html
@@ -131,31 +131,48 @@
         <section class="contact-section">
             <h2 class="title-contact">Kontakta Oss</h2>
             <form>
-                <label for="name" class="form-title">Namn:</label><br>
-                <input type="text" class="text1" id="name" name="name"><br>
-                <label for="mail" class="form-title">Mail:</label><br>
-                <input type="text" class="text1" id="mail" name="mail"><br>
-                <label for="text" class="form-title">Text:</label><br>
-                <textarea id="message" name="message" class="text2" rows="10" cols="40"></textarea><br>
+                <div class="input-row">
+                    <div class="form-group">
+                        <label for="name" class="form-title-name">Namn:</label><br>
+                        <input type="text" class="text1" id="name" name="name"><br>
+                    </div>
+                    <div class="form-group">
+                        <label for="mail" class="form-title-mail">Mail:</label><br>
+                        <input type="text" class="text1" id="mail" name="mail"><br>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="text" class="form-title">Text:</label><br>
+                    <textarea id="message" name="message" class="text2" rows="10" cols="40"></textarea><br>
+                </div>
                 <div class="button-container">
                     <button type="submit" class="button-send">Skicka</button>
                 </div>
             </form>
+            <article class="contact-quote">
+                <p><i>“If you don’t like to read, you haven’t found the right book.”<br></i> ― J.K. Rowling</p>
+            </article>
         </section>
     </main>
 
     <footer>
         <div class="footer-text openinghours">
             <h4>Öppettider</h4><br>
-            <p>Mån-Fre 10:00 - 20:00</p>
-            <p>Lör 11:00 - 22:00</p>
-            <p>Sön Stängt</p>
+            <p>Mån-Fre - 10:00 - 20:00</p>
+            <p>Lördag - 11:00 - 22:00</p>
+            <p>Söndag - Stängt</p>
         </div>
         <div class="footer-text adress">
             <h4>Här Finns Vi</h4><br>
             <p>Pärmar & Poesi</p>
             <p>Bokgatan 21</p>
             <p>123 45 Bokstaden</p>
+        </div>
+        <div class="footer-text our-vision">
+            <h4>Vår vision</h4><br>
+            <p>Sedan vi startade 1984 har vårt</p>
+            <p>mål varit att alla människor ska ha</p>
+            <p>en trygg plats att få vara sig själva.</p>
         </div>
         <div class="social-media">
             <i class="fab fa-instagram"></i>
