changes to footer and contact-form in index.html

--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
                     <a class="dropdown-link" href="#contact-section">Instagram</a>
                 </ul>
             </div>
+            <div class="navbar-links-desktop">
+                <ul class="navbar-link-list">
+                    <a class="navbar-link" href="#event-section">Evenemang</a>
+                    <a class="navbar-link" href="#news-section">Nyheter</a>
+                    <a class="navbar-link" href="#contact-section">Kontakta oss</a>
+                    
+                </ul>
+            </div>
         </nav>
     </header>
 
@@ -128,7 +136,7 @@
             </article>
         </section>
 
-        <section class="contact-section">
+        <section class="contact-section" id="contact-section">
             <h2 class="title-contact">Kontakta Oss</h2>
             <form>
                 <div class="input-row">
