--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <img class="hamburger-menu-image" src="./images/Menu.png" alt="hambuger-menu-image"/>
             </button>
             <div class="hamburger-dropdown-content">
-                <img class="hamburger-dropdown-texture-image" src="./images/dropdown-texture.png"/>
+                <img class="hamburger-dropdown-texture-image" src="./images/dropdown-texture.png" alt="hamburgermenuimage"/>
                 <ul class="dropdown-link-list">
                     <a class="dropdown-link" href="#event-section">Evenemang</a>
                     <a class="dropdown-link" href="#news-section">Nyheter</a>
@@ -84,11 +84,12 @@
             <section class="nyhets-block">
                 <article>
                     <figure>
-                        <img src="/images/CamillaLäckberg.JPG" alt="CamillaLäckberg" width="150px" height="auto">
+                        <img src="/images/CamillaLäckberg.JPG" alt="CamillaLäckberg">
                     </figure>
                     <aside>
                         <h3>Camilla Läckberg</h3>
-                        <p>Boksignering i Vadstena! Se vilka böcker Camilla tycker om att...</p>
+                        <p>Boksignering i Vadstena! Se vilka böcker Camilla tycker om att Boksignering i Vadstena! Se vilka böcker Camilla tycker om att Boksignering i Vadstena! Se vilka böcker Camilla tycker om att</p>
+                        <button type="submit" class="button-send">Läs Mer</button>
                     </aside>
                     <summary>
                         <p>Svenska Dagbladet 16h</p>
@@ -97,11 +98,12 @@
                 </article>
                 <article>
                     <figure>
-                        <img src="/images/BokmässanGBG.JPG" alt="BokmässanGBG"  width="150px" height="auto">
+                        <img src="/images/BokmässanGBG.JPG" alt="BokmässanGBG">
                     </figure>
                     <aside>
                         <h3>Bokmässan i Göteborg</h3>
-                        <p>Få de senaste nyheterna om medverkande författare...</p>
+                        <p>Få de senaste nyheterna om medverkande författare Få de senaste nyheterna om medverkande författare Få de senaste nyheterna om medverkande författare Få de senaste nyheterna om medverkande författare</p>
+                        <button type="submit" class="button-send">Läs Mer</button>
                     </aside>
                     <summary>
                         <p>GP 1d</p>
@@ -110,11 +112,13 @@
                 </article>
                 <article>
                     <figure>
-                        <img src="/images/JensLapidus.JPG" alt="Jens Lapidus"  width="150px" height="auto">
+                        <img src="/images/JensLapidus.JPG" alt="Jens Lapidus">
                     </figure>
                     <aside>
                         <h3>Jens Lapidus</h3>
-                        <p>Jens Lapidus gör tv om kända våldsutbrott</p>
+                        <p>Jens Lapidus gör tv om kända våldsutbrott. Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, vero, iste molestiae sapiente quo
+                        s dignissimos laboriosam consectetur, placeat iure natus repellat at cupiditate voluptatum? Assumenda soluta omnis consequatur quas deleniti.</p>
+                        <button type="submit" class="button-send">Läs Mer</button>
                     </aside>
                     <summary>
                         <p>SvD 2d</p>
@@ -123,7 +127,7 @@
                 </article>
                 <button type="submit" class="button-send">Läs Mer</button>
             </section>
-            <article class="event-quote">
+            <article class="news-event-quote">
                 <p><i>“There is no friend as loyal as a book.”<br></i> ― Ernest Hemingway</p>
             </article>
         </section>
