added content in news.css

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <aside>
                         <h3>Camilla Läckberg</h3>
                         <p>Boksignering i Vadstena! Se vilka böcker Camilla tycker om att Boksignering i Vadstena! Se vilka böcker Camilla tycker om att Boksignering i Vadstena! Se vilka böcker Camilla tycker om att</p>
-                        <button type="submit" class="button-send">Läs Mer</button>
+                        <button type="submit">Läs Mer</button>
                     </aside>
                     <summary>
                         <p>Svenska Dagbladet 16h</p>
@@ -111,7 +111,7 @@
                     <aside>
                         <h3>Bokmässan i Göteborg</h3>
                         <p>Få de senaste nyheterna om medverkande författare Få de senaste nyheterna om medverkande författare Få de senaste nyheterna om medverkande författare Få de senaste nyheterna om medverkande författare</p>
-                        <button type="submit" class="button-send">Läs Mer</button>
+                        <button type="submit">Läs Mer</button>
                     </aside>
                     <summary>
                         <p>GP 1d</p>
@@ -126,18 +126,18 @@
                         <h3>Jens Lapidus</h3>
                         <p>Jens Lapidus gör tv om kända våldsutbrott. Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, vero, iste molestiae sapiente quo
                         s dignissimos laboriosam consectetur, placeat iure natus repellat at cupiditate voluptatum? Assumenda soluta omnis consequatur quas deleniti.</p>
-                        <button type="submit" class="button-send">Läs Mer</button>
+                        <button type="submit">Läs Mer</button>
                     </aside>
                     <summary>
                         <p>SvD 2d</p>
                         <img src="/images/more-vertical.png" alt="moredetailsimage">
                     </summary>
                 </article>
-                <button type="submit" class="button-send">Läs Mer</button>
+                <button type="submit" class="news-button-send">Läs Mer</button>
+                <div class="news-event-quote">
+                    <p>“There is no friend as loyal as a book.”<br> ― Ernest Hemingway</p>
+                </div>
             </section>
-            <article class="news-event-quote">
-                <p><i>“There is no friend as loyal as a book.”<br></i> ― Ernest Hemingway</p>
-            </article>
         </section>
 
         <section class="contact-section" id="contact-section">
