updated in news.css

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     </figure>
                     <aside>
                         <h3>Camilla Läckberg</h3>
-                        <p>Boksignering i Vadstena! Se vilka böcker Camilla tycker om att Boksignering i Vadstena! Se vilka böcker Camilla tycker om att Boksignering i Vadstena! Se vilka böcker Camilla tycker om att</p>
+                        <p>Boksignering i Vadstena! Se vilka böcker Camilla tycker om att Boksignering i Vadstena! Se vilka böcker Camilla tycker om att läsa. Jean Edith Camilla Läckberg Sköld, under en period Eriksson, född 30 augusti 1974 i Fjällbacka i Göteborgs och Bohus län,[1] är en svensk civilekonom, deckarförfattare och entreprenör. Hon fick sitt genombrott med Fjällbackaserien, som är detektivromaner med författaren Erica Falck och polisen Patrik Hedström, och som utspelar sig i eller kring hennes födelse- och uppväxtort Fjällbacka på Sveriges västkust.[2][3]</p>
                         <button type="submit">Läs Mer</button>
                     </aside>
                     <section class="summary-news">
@@ -109,7 +109,7 @@
                     </figure>
                     <aside>
                         <h3>Bokmässan i Göteborg</h3>
-                        <p>Få de senaste nyheterna om medverkande författare Få de senaste nyheterna om medverkande författare Få de senaste nyheterna om medverkande författare Få de senaste nyheterna om medverkande författare</p>
+                        <p>Bokmässan i Göteborg är Nordens största kulturevenemang och en av de allra största bokmässorna i Europa med över 80 000 besök, 800 utställare och 300 seminarier. Varje år arrangeras tusentals programpunkter på scener och i montrar på mässgolvet, och en prominent Guest of Honour sätter sin prägel på mässan med litteratur, mat och kultur. I vårt rättighetscenter förhandlar internationella agenter rättigheter med svenska och nordiska förläggare. Bokmässan i Göteborg är ett nav för litteratur och kulturdebatt som inspirerar och väcker tankar. Genom att främja bildning, läsning och litteraturens roll i samhället gör vi tillsammans världen bättre.   </p>
                         <button type="submit">Läs Mer</button>
                     </aside>
                     <section class="summary-news">
@@ -123,8 +123,8 @@
                     </figure>
                     <aside>
                         <h3>Jens Lapidus</h3>
-                        <p>Jens Lapidus gör tv om kända våldsutbrott. Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, vero, iste molestiae sapiente quo
-                        s dignissimos laboriosam consectetur, placeat iure natus repellat at cupiditate voluptatum? Assumenda soluta omnis consequatur quas deleniti.</p>
+                        <p>Jens Lapidus är uppvuxen i Stockholmsstadsdelen Gröndal.[1] Han gick på Frans Schartaus gymnasium[1] och utbildade sig sedan till jurist vid Stockholms universitet och i London,[1] och satt ting vid Sollentuna tingsrätt.[2] Han har även läst enstaka kurser i idéhistoria, medie- och kommunikationsvetenskap, nationalekonomi och praktisk filosofi.[3]
+                            Han var biträdande affärsjurist på advokatfirman Mannheimer Swartling åren 2004–2007 och arbetade därefter som advokat på Försvarsadvokaterna.</p>
                         <button type="submit">Läs Mer</button>
                     </aside>
                     <section class="summary-news">
