--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <img src="./images/katt-desktop.jpeg" class="hero-image" alt="hero-image"/>
             <div class="hero-wrapper">
                 <h2 class="hero-headings">Böcker<br>Poesi<br>Gemenskap</h2>
-                <button class="hero-contact-us-button"><a class="hero-contact-us-button-text" href="#contact-section">Kontakta oss</a></button>
+                <a class="hero-contact-us-button" href="#contact-section">Kontakta oss</a>
             </div>
             <img src="./images/ExpandArrow.png" class="hero-down-arrow" alt="down-arrow"/>
         </section>
