corrected quote-styling

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <p>123 45 Bokstaden</p>
         </section>
         <section class="footer-text our-vision">
-            <h4>Vår vision</h4><br>
+            <h4>Vår Vision</h4><br>
             <p>Sedan vi startade 1984 har vårt</p>
             <p>mål varit att alla människor ska ha</p>
             <p>en trygg plats att få vara sig själva.</p>
