--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="navbar.css" />
-    <link rel="stylesheet" href="hero.css" />
-    <link rel="stylesheet" href="events.css" />
-    <link rel="stylesheet" href="news.css" />
-    <link rel="stylesheet" href="contact.css" />
-    <link rel="stylesheet" href="footer.css" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./navbar.css" />
+    <link rel="stylesheet" href="./hero.css" />
+    <link rel="stylesheet" href="./events.css" />
+    <link rel="stylesheet" href="./news.css" />
+    <link rel="stylesheet" href="./contact.css" />
+    <link rel="stylesheet" href="./footer.css" />
     <title>Pärmar & Poesi</title>
 </head>
 
