Fixed link to logo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
     <header>
-        <h1>Pärmar & Poesi</h1>
+        <a class="logo-link" href="#hero-section"><h1>Pärmar & Poesi</h1></a>
         <nav>
             <button class="hamburger-menu-button">
                 <img class="hamburger-menu-close-image" src="./images/black-x.png" alt="hamburger-menu-close-image"/>
@@ -54,7 +54,7 @@
     </header>
 
     <main>
-        <section class="hero-section">
+        <section class="hero-section" id="hero-section">
             <img src="./images/katt-desktop.jpeg" class="hero-image" alt="hero-image"/>
             <div class="hero-wrapper">
                 <h2 class="hero-headings">Böcker<br>Poesi<br>Gemenskap</h2>
