corrected font-size

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
         href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="navbar.css" />
-    <link rel="stylesheet" href="hero.css" />
-    <link rel="stylesheet" href="events.css" />
-    <link rel="stylesheet" href="news.css" />
-    <link rel="stylesheet" href="contact.css" />
-    <link rel="stylesheet" href="footer.css" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./navbar.css" />
+    <link rel="stylesheet" href="./hero.css" />
+    <link rel="stylesheet" href="./events.css" />
+    <link rel="stylesheet" href="./news.css" />
+    <link rel="stylesheet" href="./contact.css" />
+    <link rel="stylesheet" href="./footer.css" />
     <title>Pärmar & Poesi</title>
 </head>
 
 <body>
     <header>
-        <h1>Pärmar & Poesi</h1>
+        <a class="logo-link" href="#hero-section"><h1>Pärmar & Poesi</h1></a>
         <nav>
             <button class="hamburger-menu-button">
                 <img class="hamburger-menu-close-image" src="./images/black-x.png" alt="hamburger-menu-close-image"/>
@@ -54,7 +54,7 @@
     </header>
 
     <main>
-        <section class="hero-section">
+        <section class="hero-section" id="hero-section">
             <img src="./images/katt-desktop.jpeg" class="hero-image" alt="hero-image"/>
             <div class="hero-wrapper">
                 <h2 class="hero-headings">Böcker<br>Poesi<br>Gemenskap</h2>
